Melhoria na cobertura dos testes e fixes nas filtragens